--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@fastify/cors": "^9.0.1",
     "dotenv": "^16.4.1",
     "fastify": "^4.26.0",
-    "firebase-admin": "^12.0.0"
+    "firebase-admin": "^12.0.0",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.14",
@@ -30,7 +31,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2"
   }
 }
