--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "main.ts",
   "scripts": {
-    "start": "tsc && node dist/main.js",
-    "dev": "ts-node main.ts",
+    "start:dev": "tsc && node dist/main.js",
+    "start:prod": "node dist/main.js",
     "build": "tsc -p tsconfig.json",
     "lint": "eslint . && prettier -c '**/*.js' '**/*.ts'",
     "test": "npm run lint && tsc"
@@ -20,8 +20,7 @@
     "@fastify/cors": "^9.0.1",
     "dotenv": "^16.4.1",
     "fastify": "^4.26.0",
-    "firebase-admin": "^12.0.0",
-    "typescript": "^5.3.3"
+    "firebase-admin": "^12.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.14",
@@ -31,6 +30,6 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "prettier": "^3.2.4",
-    "ts-node": "^10.9.2"
+    "typescript": "^5.3.3"
   }
 }
